# enigma2-plugins

./: .gitattributes  .gitignore  .gitmodules  Makefile.am  Makefile.translations  README.md  Rules-cpp.mak  Rules-po.mak  configure.ac  genmetaindex.py  xml2po.py
3dsettings/po/: Makefile.am
3dsettings/src/: LICENSE  plugin.py
advhdmi/src/: AdvHdmiCecSetup.py  plugin.py
aihdcontroler/meta/: Makefile.am
aihdcontroler/src/: plugin.py
antiscrollbar/src/: plugin.py
ardmediathek/src/: plugin.py
aspectratioswitch/po/: AspectRatioSwitch.pot  Makefile.am
aspectratioswitch/src/: plugin.py
audiorestart/po/: AudioRestart.pot  Makefile.am
audiorestart/src/: plugin.py
audiosync/: Makefile.am
audiosync/po/: AudioSync.pot
audiosync/src/: AC3delay.py  AC3main.py  AC3setup.py  MovableScreen.py  keymap.xml  plugin.py
automaticcleanup/meta/: plugin_automaticcleanup.xml
automaticcleanup/po/: AutomaticCleanup.pot  Makefile.am
automaticcleanup/src/: plugin.py
automatictimerlistcleanup/meta/: Makefile.am  plugin_automatictimerlistcleanup.xml
automatictimerlistcleanup/po/: AutomaticTimerlistCleanup.pot  Makefile.am
automatictimerlistcleanup/src/: plugin.py
automaticvolumeadjustment/src/: AutomaticVolumeAdjustment.py  AutomaticVolumeAdjustmentConfig.py  AutomaticVolumeAdjustmentSetup.py  plugin.py
autoresolution/po/: AutoResolution.pot  Makefile.am
autoresolution/src/: plugin.py
autotimer/po/: AutoTimer.pot  Makefile.am  de.po  es.po  fy.po  it.po  nl.po  tr.po
autotimer/src/: AutoPoller.py  AutoTimer.py  AutoTimerAddon.py  AutoTimerComponent.py  AutoTimerConfiguration.py  AutoTimerEditor.py  AutoTimerFilter.py  AutoTimerFilterList.py  AutoTimerImporter.py  AutoTimerList.py  AutoTimerLogger.py  AutoTimerOverview.py  AutoTimerPreview.py  AutoTimerResource.py  AutoTimerSettings.py  AutoTimerWizard.py  Logger.py  ShowLogScreen.py  __init__.py  faq.xml  plugin.py
babelzapper/src/: plugin.py
birthdayreminder/po/: BirthdayReminder.pot  Makefile.am
birthdayreminder/src/: BirthdayNetworking.py  BirthdayReminder.py  BirthdayTimer.py  plugin.py
bitrateviewer/src/: Makefile.am  plugin.py
bonjour/src/: Bonjour.py  plugin.py
c3vocupdater/CONTROL/: control
c3vocupdater/meta/: Makefile.am  plugin_c3vocupdater.xml
c3vocupdater/src/: LICENCE  Makefile.am  c3voc.py  epgdb.py  maintainer.info  plugin.py
cdinfo/CONTROL/: control
cdinfo/src/: plugin.py
cec/CONTROL/: control
cec/meta/: Makefile.am  plugin_cec.xml
cec/src/: Cec.py  CecBoot.py  CecConfig.py  CecDevice.py  CecDeviceList.py  CecRemote.py  Makefile.am  VendorHandlerBase.py  VendorHandlerSamsung.py  __init__.py  maintainer.info  plugin.py
channelselectionshorttitle/src/: ChannelSelectionShortTitle.py
curlytx/: LICENSE  README.rst
curlytx/po/: CurlyTx.pot  Makefile.am
curlytx/src/: CurlyTx.py  CurlyTxSettings.py  plugin.py
doc/: TRANSLATIONS  TRANSLATIONS.mak
dreamexplorer/CONTROL/: control
dreamexplorer/meta/: plugin_dreamexplorer.xml
dreamexplorer/src/: DreamExplorerFileList.py  Makefile.am  maintainer.info  myFileList.py  myNumericalTextInput.py  plugin.py
dreamirc/src/: Makefile.am  dreamIRCSetup.py  dreamIRCTools.py  e2account.py  e2chat.py  e2support.py  ircsupport.py  locals.py  plugin.py
dreammediathek/src/: MoviePlayer.py  ServiceXML.py  plugin.py
dvdbackup/CONTROL/: control
dvdbackup/po/: DVDBackup.pot  Makefile.am
dvdbackup/src/: plugin.py
dyndns/src/: plugin.py
easyinfo/src/: plugin.py
easymedia/po/: EasyMedia.pot
easymedia/src/: keymap.xml  plugin.py
ecasa/src/: EcasaGui.py
eibox/meta/: plugin_eibox.xml
eibox/po/: EIBox.pot
eibox/src/: LICENSE  README  plugin.py
elektro/po/: Elektro.pot  Makefile.am
elektro/src/: Makefile.am  ping.py  plugin.py
emailclient/meta/: plugin_emailclient.xml
emailclient/po/: EmailClient.pot  Makefile.am
emailclient/src/: EmailConfig.py  __init__.py  plugin.py  protocol.py  uu.py
emission/src/: EmissionDetailview.py  EmissionOverview.py  plugin.py
eparted/src/: LICENSE  Makefile.am  eparted.py  plugin.py
epgbackup/CONTROL/: control
epgbackup/meta/: plugin_epgbackup.xml
epgbackup/po/: EPGBackup.pot  de.po
epgbackup/src/: EPGBackup.sh  EPGBackupSupport.py  EPGBackupTools.py  __init__.py  plugin.py
epgcopy/CONTROL/: control
epgcopy/meta/: Makefile.am  plugin_epgcopy.xml
epgcopy/src/: Makefile.am  maintainer.info  plugin.py
epgrefresh/CONTROL/: control
epgrefresh/po/: EPGRefresh.pot  Makefile.am  de.po  en.po  es.po  fy.po  it.po  nl.po  tr.po
epgrefresh/src/: EPGRefresh.py  EPGRefreshChannelEditor.py  EPGRefreshConfiguration.py  EPGRefreshResource.py  EPGRefreshTimer.py  MainPictureAdapter.py  Makefile.am  OrderedSet.py  PipAdapter.py  RecordAdapter.py  __init__.py  plugin.py
epgsearch/CONTROL/: control
epgsearch/po/: EPGSearch.pot  Makefile.am  es.po  it.po  tr.po
epgsearch/src/: EPGSearch.py  EPGSearchFilter.py  EPGSearchSetup.py  Makefile.am  __init__.py  plugin.py
eurotictv/CONTROL/: control
eurotictv/meta/: plugin_eurotictv.xml
eurotictv/po/: Makefile.am  eUroticTV.pot
eurotictv/src/: plugin.py
eventlist/src/: EventList.py  EventListDisplay.py
eventposition/src/: EventPosition.py
fancontrol2/po/: FanControl2.pot  Makefile.am
fancontrol2/src/: FC2webSite.py  Sensors.py  globals.py  plugin.py
filebrowser/src/: Makefile.am  (+1 more)
imdb/: Makefile.am
merlinepgcenter/: Makefile.am
movieretitle/: Makefile.am
networkbrowser/src/lib/: Makefile.am  list.c  main.c  nbtscan.c  nbtscan.h  range.c  range.h  rpcinfo.c  showmount.c  showmount.h  smb.h  smbinfo.c  smbinfo.h  statusq.c  statusq.h
permanenttimeshift/: Makefile.am
po/: Makefile.am  ar.po  ca.po  cs.po  da.po  de.po  el.po  en.po  enigma2-plugins-py.pot  enigma2-plugins.pot  es.po  et.po  fa.po  fi.po  fr.po  fy.po  he.po  hr.po  hu.po  is.po  it.po  lt.po  lv.po  nl.po  no.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  sr.po  sv.po  tr.po  uk.po
podcast/: Makefile.am
scripts/: meta2po.py  xml2po.py
seriesplugin/: Makefile.am
trackautoselect/: Makefile.am
webinterface/: Makefile.am  TODO
(+941 files in other folders)
