SUBDIRS = \
	3dsettings \
	aihdcontroler \
	antiscrollbar \
	aspectratioswitch \
	audiorestart \
	audiosync \
	automaticcleanup \
	automatictimerlistcleanup \
	automaticvolumeadjustment \
	autoresolution \
	autotimer \
	birthdayreminder \
	bonjour \
	cdinfo \
	dreamexplorer \
	dreamirc \
	dreammediathek \
	dvdbackup \
	dyndns \
	easyinfo \
	easymedia \
	ecasa \
	eibox \
	elektro \
	emailclient \
	emission \
	eparted \
	epgcopy \
	epgrefresh \
	epgsearch \
	eurotictv \
	fancontrol2 \
	filebrowser \
	fritzcall \
	fstabeditor \
	ftpbrowser \
	genuinedreambox \
	googlemaps \
	growlee \
	imdb \
	internetradio \
	kiddytimer \
	letterbox \
	logomanager \
	mediadownloader \
	menusort \
	merlinepg \
	merlinepgcenter \
	meteoitalia \
	mosaic \
	movielistpreview \
	movieretitle \
	moviesearch \
	movieselectionquickbutton \
	movietagger \
	movieepg \
	mphelp \
	multirc \
	mytube \
	namezap \
	ncidclient \
	netcaster \
	ofdb \
	orfteletext \
	permanentclock \
	pipservicerelation \
	pipzap \
	pluginhider \
	pluginsort \
	podcast \
	pushservice \
	quickbutton \
	remotetimer \
	satipclient \
	satloader \
	seekbar \
	serienfilm \
	setpasswd \
	showclock \
	simplerss \
	startupservice \
	startuptostandby \
	subsdownloader2 \
	svdrp \
	tageditor \
	teletext \
	toolkit \
	trackautoselect \
	tubelib \
	tvcharts \
	unwetterinfo \
	valixdcontrol \
	videocolorspace \
	virtualzap \
	weatherplugin \
	weathercomponenthandler \
	webadmin \
	webcamviewer \
	webbouqueteditor \
	webinterface \
	werbezapper \
	yttrailer \
	zaphistorybrowser \
	zapstatistic \
	po

CLEANFILES =
