SUBDIRS = \
	3dsettings \
	aihdcontroler \
	antiscrollbar \
	aspectratioswitch \
	audiorestart \
	audiosync \
	automaticcleanup \
	automatictimerlistcleanup \
	automaticvolumeadjustment \
	autoresolution \
	autotimer \
	birthdayreminder \
	bonjour \
	c3vocupdater \
	cec \
	cdinfo \
	dreamexplorer \
	dreamirc \
	dvdbackup \
	dyndns \
	easyinfo \
	easymedia \
	eibox \
	elektro \
	emailclient \
	emission \
	eparted \
	epgcopy \
	epgrefresh \
	epgsearch \
	fancontrol2 \
	filebrowser \
	fritzcall \
	fstabeditor \
	ftpbrowser \
	genuinedreambox \
	growlee \
	imdb \
	internetradio \
	kiddytimer \
	letterbox \
	logomanager \
	mediadownloader \
	menusort \
	merlinepg \
	merlinepgcenter \
	merlinskinthemes \
	mosaic \
	movielistpreview \
	movieretitle \
	moviesearch \
	movieselectionquickbutton \
	movietagger \
	movieepg \
	mphelp \
	multirc \
	mytube \
	namezap \
	ncidclient \
	permanentclock \
	pipservicerelation \
	pipzap \
	pluginhider \
	pluginsort \
	podcast \
	pushservice \
	quickbutton \
	remotetimer \
	satipclient \
	satloader \
	screensaver \
	seekbar \
	serienfilm \
	setpasswd \
	showclock \
	simplerss \
	skipintro \
	startupservice \
	startuptostandby \
	streamserverseek \
	subsdownloader2 \
	svdrp \
	tageditor \
	teletext \
	toolkit \
	trackautoselect \
	tubelib \
	tvcharts \
	twitchtv \
	unwetterinfo \
	videocolorspace \
	virtualzap \
	weatherplugin \
	weathercomponenthandler \
	webadmin \
	webcamviewer \
	webbouqueteditor \
	webinterface \
	werbezapper \
	yttrailer \
	zaphistorybrowser \
	zapstatistic

CLEANFILES =
